[gd_scene load_steps=15 format=3 uid="uid://b5wwlq8ic5jno"]

[ext_resource type="Script" uid="uid://b5m8coo2miceg" path="res://scenes/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://cu0kcm2y54olv" path="res://scenes/bullet.tscn" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://chv1n3b0gfch6" path="res://assets/shield.png" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://dljngmceb5ymu" path="res://scenes/death_particles.tscn" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dnhmj5342piua" path="res://assets/space_ship_animations.png" id="4_tuyoq"]
[ext_resource type="AudioStream" uid="uid://debuh0v6vo0lb" path="res://sounds/kenney_sci-fi-sounds/Audio/thrusterFire_002.ogg" id="6_tuyoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("4_tuyoq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("4_tuyoq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("4_tuyoq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("4_tuyoq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ur7pv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"thrust",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_tuyoq"]
length = 0.001

[sub_resource type="Animation" id="Animation_fjrip"]
resource_name = "thrust"
length = 0.3
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_smehm"]
_data = {
&"RESET": SubResource("Animation_tuyoq"),
&"thrust": SubResource("Animation_fjrip")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_g2els")
bullet = ExtResource("2_dqkch")
death_particles_scene = ExtResource("3_qlg0r")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ur7pv")

[node name="ShieldSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.180392, 1, 1, 1)
position = Vector2(1, 0)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_qhqgy")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(-12, 5, -4, -3, 0, -15, 4, -3, 13, 6, 6, 7, 0, 13, -6, 7)

[node name="SpawnImmunityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ThrustAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tuyoq")
volume_db = -5.808
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_smehm")
}

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="SpawnImmunityTimer" to="." method="_on_spawn_immunity_timer_timeout"]
